--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".main.MainFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id = "@+id/fragmentRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Hello" />
